2013-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria.css: Added a new style rule.
	
	* operation/side_menu.php: Now the incident id input for the
	search on the side menu is bigger to let to see easily ids with
	4 digits of lenght.
	
	* operation/inventories/inventory_detail.php: Visual fixes.
	
2013-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/inventories/inventory_detail.php: Some ACL fixes.
	
2013-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_agenda.php: New file. Added he function
	"agenda_get_entry_permission".
	
	* operation/agenda/entry.php: Added ACL rules to determine
	who can edit or delete a file. Added code to delete an entry.
	
	* include/js/agenda.js: Added code and a button to delete an entry.
	
	* include/styles/integria.css: Added an style rule for blank
	buttons.
	
2013-10-02  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup_project.php: Added file.

2013-10-02  Sancho Lerena <slerena@artica.es>

	* include/integria_cron.php: Fixed some issues with local SMTP
	sending. Fixed some issues in newsletter (trans pixel on local relay).

2013-10-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/ajax/inventories.php: Improved the styles of the inventory
	search form and fixed a call to a function.
	
	* include/js/integria_inventory.js: Fixed some jQuery selectors.
	
	* operation/incidents/incident_detail.php: Changed the id of the div
	that contains the inventory search dialog.
	
2013-10-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/invoices/invoices.php: Added the 'reference' to the
	invoices forms.
	
2013-10-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/migrate.sql: Added the column 'reference' to the table
	'tinvoice'.
	
	* godmode/setup/setup_crm.php: Deleted the invoice logo alignment
	from the form.
	
	* include/ajax/inventories.php: Changed some label names.
	